# NavEng2

./: .gitignore  CMakeLists.txt  OrbWeb.htm  README.md  directions.cpp  package-lock.json  package.json  requirements.txt
.github/workflows/: node.js.yml  obstacle_processing.yml
Dijkstra/: EngGraph.h  graph.cpp  graph.h  heap.hpp  main.cpp  shortest_path.cpp
Image_Processing/: ImageProcessing.py  change_dir.py  for_vertical.py  from PIL import Image.py  supabaseTest.py
backend/: .env  app.js  index.js  package-lock.json  package.json
backend/Dijkstra/: CycleCorrection.cpp  Dijkstra_test.cpp  EngGraph.h  TestingDoubleEgde.cpp  TopDownMap.cpp  graph.cpp  graph.h  heap.hpp  main  main.cpp  shortest_path.cpp  shortest_path.h
backend/Models/: export_onnx.py  generate_train_images.py  train_unet_r34_3class.py
backend/Models/FootPathDetector/: README.dataset.txt  README.roboflow.txt  export_onnx.py  reorganize_roboflow_png_masks.py  segformer.py
backend/routes/: FailedTest_input.txt  Thoughts.txt  rename_database.test.js  router.js
backend/test/: Failed_test.test.js  ImageLoadable.test.js  NewPathTest.test.js  TestSpecificPath.test.js  router.test.js
myExpressApp/: package-lock.json  package.json  server.js
orbital/: package-lock.json  package.json
orbital/backend/: index.js  package-lock.json  package.json
orbital/backend/Dijkstra/: graph.cpp  heap.hpp  main.cpp  shortest_path.cpp
orbital/backend/Pictures/: desktop.ini
orbital/frontend/: .gitignore  package-lock.json  package.json
orbital/src/: App.js  c_cpp_properties.json
(+51 files in other folders)
